--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <groovy.version>2.3.3</groovy.version>
+    <!-- Java 9 support: https://issues.apache.org/jira/browse/GROOVY-7587 -->
+    <groovy.version>2.4.6</groovy.version>
   </properties>
 
   <dependencies>
